--- a/web/src/main/resources/templates/fragments/studentForm.html
+++ b/web/src/main/resources/templates/fragments/studentForm.html
@@ -15,38 +15,38 @@
             <div class="col-12"></div>
             <div class="col-md-5 ms-5 m-3">
                 <label for="studentUsername" class="form-label">Username</label>
-                <input type="text" th:field="*{username}" class="form-control" id="studentUsername" aria-describedby="studentUsername">
+                <input type="text" th:field="*{username}" class="form-control" id="studentUsername" aria-describedby="studentUsername" required minlength="6" maxlength="20">
             </div>
             <div class="col-md-6"></div>
             <div class="col-5 ms-5 me-3">
                 <label for="studentEmail" class="form-label">E-mail</label>
-                <input type="email" th:field="*{email}"class="form-control" id="studentEmail" aria-describedby="studentEmail">
+                <input type="email" th:field="*{email}"class="form-control" id="studentEmail" aria-describedby="studentEmail" required>
                 <small id="emailHelp"  class="form-text text-muted">We'll never share your email with anyone else.</small>
             </div>
             <div class="col-5 ms-5 m-3">
                 <label for="studentPassword" class="form-label">Password</label>
-                <input type="password" th:field="*{password}" class="form-control" id="studentPassword" aria-describedby="studentPassword">
+                <input type="password" th:field="*{password}" class="form-control" id="studentPassword" aria-describedby="studentPassword" required minlength="8" maxlength="20">
                 <small id="passwordHelp" class="form-text text-muted">
                     Must be 8-20 characters long.
                 </small>
             </div>
             <div class="col-md-5 ms-5 m-3">
                 <label for="studentFirstName" class="form-label">First Name</label>
-                <input type="text" th:field="*{firstName}"class="form-control" id="studentFirstName" aria-describedby="studentFirstName">
+                <input type="text" th:field="*{firstName}"class="form-control" id="studentFirstName" aria-describedby="studentFirstName" required maxlength="20">
             </div>
 
             <div class="col-md-5 ms-5 m-3">
                 <label for="studentLastName" class="form-label">Last Name</label>
-                <input type="text" th:field="*{lastName}" class="form-control" id="studentLastName" aria-describedby="studentLastName">
+                <input type="text" th:field="*{lastName}" class="form-control" id="studentLastName" aria-describedby="studentLastName" required maxlength="30">
             </div>
             <div class="col-md-3 ms-5 m-3">
                 <label for="studentPhone" class="form-label">Contact Number</label>
-                <input type="text" th:field="*{contactNumber}" class="form-control" id="studentPhone" aria-describedby="studentPhone">
+                <input type="text" th:field="*{contactNumber}" class="form-control" id="studentPhone" aria-describedby="studentPhone" required>
             </div>
 
             <div class="col-md-4 ms-5 m-3">
                 <label for="studentDiscipline" class="form-label">Discipline</label>
-                <select class="form-select" th:field="*{discipline}" id="studentDiscipline" aria-label="studentDiscipline">
+                <select class="form-select" th:field="*{discipline}" id="studentDiscipline" aria-label="studentDiscipline" required>
                     <option selected value="">Select...</option>
                     <option value="Software Development">Software Development</option>
                     <option value="Networking">Networking</option>
@@ -56,7 +56,7 @@
             </div>
             <div class="col-md-2 ms-5 m-3">
                 <label for="studentId" class="form-label">CQU Student ID</label>
-                <input type="text" th:field="*{studentId}"class="form-control" id="studentId" aria-describedby="studentId">
+                <input type="text" th:field="*{studentId}"class="form-control" id="studentId" aria-describedby="studentId" required maxlength="10">
             </div>
             <div class="form-group mb-3 text-center">
                 <button type="submit" class="btn form-button">Register</button>
