--- a/web/src/main/resources/templates/fragments/forum.html
+++ b/web/src/main/resources/templates/fragments/forum.html
@@ -128,12 +128,12 @@
 
         <div class="row p-3 pt-0">
             <label for="post-title" class="form-label">Title</label>
-            <input class="form-floating user-input" id="post-title"  th:field="*{title}">
+            <input class="form-floating user-input" id="post-title"  th:field="*{title}" required>
         </div>
 
         <div class="row p-3 pt-0">
             <label for="post-content" class="form-label">Content</label>
-            <textarea class="form-floating user-input" id="post-content" rows="5" th:field="*{body}"></textarea>
+            <textarea class="form-floating user-input" id="post-content" rows="5" th:field="*{body}" required></textarea>
         </div>
 
         <div class="form-group mb-3 text-center">
@@ -150,7 +150,7 @@
     <form th:action="@{reply-to-post?type=reply&postId={pid}( pid=${postId} )}" th:object="${reply}" method="post">
         <div class="row p-3 pt-0">
             <label for="reply-content" class="form-label"><b>Reply</b></label>
-            <textarea class="post-content form-floating" id="reply-content" rows="5" th:field="*{body}"></textarea>
+            <textarea class="post-content form-floating" id="reply-content" rows="5" th:field="*{body}" required></textarea>
         </div>
 
         <div class="form-group mb-3 text-center">
