Implement remaining educator validation

--- a/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
+++ b/web/src/main/resources/templates/fragments/expressions-of-interest-tables.html
@@ -26,7 +26,7 @@
                     <th scope="row" th:text="${openEOI.id}"></th>
                     <td th:text="${openEOI.category}">Microsoft</td>
                     <td th:text="${openEOI.location}">Brisbane</td>
-                    <td th:text="${openEOI.description}">Slavey with extra steps</td>
+                    <td th:text="${openEOI.description}">Slavery with extra steps</td>
                     <td th:text="${#dates.format(openEOI.date, 'dd/MM/yyyy')}">01/01/2022</td>
                     <td style="display: flex;">
                         <div class="mx-auto">
