--- a/web/src/main/resources/templates/fragments/position-details.html
+++ b/web/src/main/resources/templates/fragments/position-details.html
@@ -161,7 +161,7 @@
             <div class="col-lg-10">
                 <label for="jobDescription" class="col-form-label pr-0">Message</label>
                 <textarea rows="5" class="form-control" id="applicationMessage" th:field="*{message}"
-                    placeholder="Write a brief message to be sent with your application"></textarea>
+                    placeholder="Write a brief message to be sent with your application" required></textarea>
             </div>
             <div class="col-lg-1"></div>
         </div>
