update profile validation

--- a/web/src/main/resources/templates/fragments/profile-forms.html
+++ b/web/src/main/resources/templates/fragments/profile-forms.html
@@ -117,7 +117,7 @@
                             </div>
                             <div class="col-8">
                                 <input type="text" class="w-100 h-auto my-1" th:value="${currentUser.username}"
-                                       th:field="*{username}" required>
+                                       th:field="*{username}" required minlength="6" maxlength="20">
                             </div>
                         </div>
 
@@ -288,7 +288,7 @@
                             </div>
                             <div class="col-8">
                                 <input type="text" class="w-100 h-auto my-1" th:value="${currentUser.username}"
-                                       th:field="*{username}" required>
+                                       th:field="*{username}" required minlength="6" maxlength="20">
                             </div>
                         </div>
 
@@ -467,7 +467,7 @@
                             </div>
                             <div class="col-8">
                                 <input type="text" class="w-100 h-auto my-1" th:value="${currentUser.username}"
-                                       th:field="*{username}" required>
+                                       th:field="*{username}" required minlength="6" maxlength="20">
                             </div>
                         </div>
 
