--- a/web/src/main/resources/templates/about.html
+++ b/web/src/main/resources/templates/about.html
@@ -29,7 +29,7 @@
                         </p>
                     </p>
                 </div>
-                <div class="col-lg-6 d-none d-lg-block"><img src="assets/aboutus.jpg" alt="coding image" class="img-fluid"></div>
+                <div class="col-lg-6 d-none d-lg-block"><img src="assets/collaborating.jpg" alt="coding image" class="img-fluid"></div>
             </div>
         </div>      
     </body>
