--- a/web/src/main/resources/templates/index.html
+++ b/web/src/main/resources/templates/index.html
@@ -15,24 +15,24 @@
                     </div>
                         <div class="carousel-inner">
                             <div class="carousel-item active">
-                                <img src ="assets/example.jpg" class="d-block w-100" alt="..." />
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>EXAMPLE SLIDE TITLE 1</h5>
-                                    <p>THIS MUST BE CHANGED</p>
+                                <img src ="assets/students.jpg" class="d-block w-100" alt="..." />
+                                <div class="carousel-caption d-none d-md-block tinted">
+                                    <h5>Your Uni... Your Community</h5>
+                                    <p>University placements and beyond!</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/example2.jpg" class="d-block w-100" alt="..." />
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>EXAMPLE SLIDE TITLE 2</h5>
-                                    <p>THIS MUST BE CHANGED</p>
+                                <img src="assets/placement.jpg" class="d-block w-100" alt="..." />
+                                <div class="carousel-caption d-none d-md-block tinted">
+                                    <h5>Live Placement Offers</h5>
+                                    <p>See live placement offers in your field!</p>
                                 </div>
                             </div>
                             <div class="carousel-item">
-                                <img src="assets/example3.jpg" class="d-block w-100" alt="..." />
-                                <div class="carousel-caption d-none d-md-block">
-                                    <h5>EXAMPLE SLIDE TITLE 3</h5>
-                                    <p>THIS MUST BE CHANGED</p>
+                                <img src="assets/job.jpg" class="d-block w-100" alt="..." />
+                                <div class="carousel-caption d-none d-md-block tinted">
+                                    <h5>Real-time Job Vacancies</h5>
+                                    <p>Apply for jobs matched perfectly to your degree!</p>
                                 </div>
                             </div>
                         </div>
