update login page

--- a/web/src/main/resources/templates/login.html
+++ b/web/src/main/resources/templates/login.html
@@ -7,7 +7,7 @@
 <div th:replace="fragments/navigation :: top-navigation"></div>
 
 <div class="container">
-    <h1 class="form-style">Login</h1>
+    <h1 class="form-style m-3">Login</h1>
 
 <form name='f' action="login" method='POST'>
 
