--- a/web/src/main/resources/static/css/common.css
+++ b/web/src/main/resources/static/css/common.css
@@ -63,3 +63,9 @@ input:invalid {
 textarea:invalid {
     border: 1px dashed red;
 }
+
+.sidebar-border {
+    border-color: #003057 !important;
+    border-style: solid;
+    border-width: 2px;
+}
